--- a/index.html
+++ b/index.html
@@ -1,22 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/bootstrap.min.css">
-    <link rel="stylesheet" href="style/all.min.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/bootstrap.min.css" />
+    <link rel="stylesheet" href="style/all.min.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Quote</title>
   </head>
   <body>
-    <div class="container py-1 text-center"><h2>hello world</h2><blockquote>author</blockquote></div>
-  <script src="script/script.js"></script>
+    <div class="container py-1">
+      <div
+        class="header d-flex justify-content-center text-center border-bottom py-4"
+      >
+        <h1 class="position-relative">Bookmarker</h1>
+      </div>
+
+      <div class="input border-bottom py-4">
+        <div class="title d-flex align-items-center justify-content-center">
+          <i class="fa fa-bookmark" aria-hidden="true"></i>
+          <h2 class="p-2">Bookmark your favorite sites</h2>
+          <i class="fa fa-bookmark" aria-hidden="true"></i>
+        </div>
+
+        <div class="inputFields">
+          <label for="bookmark"
+            ><h6><i class="fa-solid fa-book-bookmark"></i> Site Name</h6></label
+          >
+          <input
+            id="bookmark"
+            class="w-100 mb-3 p-1 rounded"
+            type="text"
+            placeholder="Bookmark Name"
+          />
+          <label for="url d-flex">
+            <h6>
+              <i class="fa fa-link" aria-hidden="true"></i> Site Url
+            </h6></label
+          >
+          <input
+            id="url"
+            class="w-100 mb-3 p-1 rounded"
+            type="text"
+            placeholder="Website URL"
+          />
+          <div class="button d-flex">
+            <button type="button" class="btn btn-outline-primary m-auto px-5">
+              Submit
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="result">
+        <table class="table text-center">
+          <thead>
+            <th>Index</th>
+            <th>Website Name</th>
+            <th>Visit</th>
+            <th>Delete</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>www</td>
+              <td>
+                <a href="facebook.com" target="_blank"><button type="button" class="btn btn-outline-primary">
+                  <i class="fa fa-eye" aria-hidden="true"></i> visit
+                </button></a>
+              </td>
+              <td>
+                <button type="button" class="btn btn-outline-danger">
+                  <i class="fa fa-trash" aria-hidden="true"></i> delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <script src="script/script.js"></script>
   </body>
 </html>
