--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             placeholder="Website URL"
           />
           <div class="button d-flex">
-            <button onclick="add()" type="button" class="btn btn-outline-primary m-auto px-5">
+            <button onclick="add()" type="button" class="clear btn btn-outline-primary m-auto px-5">
               Submit
             </button>
-            <button onclick="clearbookmarks()" type="button" class="btn btn-outline-danger m-auto px-5">
+            <button onclick="clearbookmarks()" type="button" class="clear btn btn-outline-danger m-auto px-5">
               Clear all Bookmarks
             </button>
           </div>
