--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="input border-bottom py-4">
         <div class="title d-flex align-items-center justify-content-center">
           <i class="fa fa-bookmark" aria-hidden="true"></i>
-          <h2 class="p-2 ">Bookmark your favorite sites</h2>
+          <h2 class="p-2">Bookmark your favorite sites</h2>
           <i class="fa fa-bookmark" aria-hidden="true"></i>
         </div>
 
@@ -57,7 +57,7 @@
             class="form-control mb-3 p-1 rounded"
             type="text"
             placeholder="Bookmark Name"
-            oninput="checknamevalidation(this.value)"
+            oninput="checknamevalidation(this.value , 'name')"
           />
           <label for="url">
             <h6>
@@ -69,14 +69,42 @@
             class="form-control w-100 mb-3 p-1 rounded"
             type="text"
             placeholder="Website URL"
+            oninput="checknamevalidation(this.value , 'url')"
           />
-          <div class="button d-flex">
-            <button onclick="add()" type="button" class="clear btn btn-outline-primary m-auto px-5">
+          <div class="button d-flex mb-3">
+            <button
+              onclick="add()"
+              type="button"
+              class="clear btn btn-outline-primary m-auto px-5"
+            >
               Submit
             </button>
-            <button onclick="clearbookmarks()" type="button" class="clear btn btn-outline-danger m-auto px-md-5">
+            <button
+              onclick="clearbookmarks()"
+              type="button"
+              class="clear btn btn-outline-danger m-auto px-md-5"
+            >
               Clear all Bookmarks
             </button>
+          </div>
+          <div class="filters d-flex column-gap-2 justify-content-between align-items-center">
+            <div class="form-floating w-auto">
+              <select
+                class="form-select"
+                id="floatingSelect"
+                aria-label="Floating label select example"
+              >
+                <option selected value="o">Oldest</option>
+                <option value="n">Newest</option>
+              </select>
+              <label for="floatingSelect">Sort by:</label>
+            </div>
+            <input
+              id="search"
+              class="form-control w-auto flex-grow-1 p-2 rounded"
+              type="search"
+              placeholder="Search by website name"
+            />
           </div>
         </div>
       </div>
@@ -84,13 +112,13 @@
       <div class="result">
         <table class="table text-center">
           <thead>
-            <th>Index</th>
-            <th>Website Name</th>
-            <th>Visit</th>
-            <th>Delete</th>
+            <th class="px-1">Index</th>
+            <th class="px-1">Website Name</th>
+            <th class="px-1">Visit</th>
+            <th class="px-1">Update</th>
+            <th class="px-1">Delete</th>
           </thead>
-          <tbody id="res">
-          </tbody>
+          <tbody id="res"></tbody>
         </table>
       </div>
     </div>
