adding sort feature

--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                 class="form-select"
                 id="floatingSelect"
                 aria-label="Floating label select example"
+                onchange="display(this.value)"
               >
-                <option selected value="o">Oldest</option>
-                <option value="n">Newest</option>
+                <option  value="o">Oldest</option>
+                <option  value="n">Newest</option>
               </select>
               <label for="floatingSelect">Sort by:</label>
             </div>
